--- a/scss/blocks/_collection.scss
+++ b/scss/blocks/_collection.scss
@@ -9,7 +9,7 @@
     &__inner-wrapper {
         padding-top: 130px;
         background-image: url(./../../images/background-text.svg);
-        background-size: 1111px 196px contain;
+        background-size: contain;
         background-repeat: no-repeat;
         background-position: calc(0%) calc(1%);
     }
@@ -20,7 +20,6 @@
     }
     
     &__item {
-        padding-top: 260px;
         max-width: 255px;
         margin-right: 30px;
         display: flex;
@@ -35,8 +34,12 @@
         margin-right: 0px;
     }
     
+    &__item-wrapper {
+        margin-top: 72px;
+    } 
+
     &__heading-gran {
-        font-family: 'Fraunces 9pt';
+        font-family: 'Fraunces';
         font-style: normal;
         font-weight: 900;
         font-size: 24px;
@@ -45,18 +48,7 @@
         margin-bottom: 24px;
     }
     
-    &__heading-gran::before {
-        content: "";
-        display: inline-block;
-        background-image: url(./../../images/espresso.png);
-        background-size: cover;
-        width: 256px;
-        height: 193px;
-        top: 0;
-        background-position-x: -40px;
-        position: absolute;
-    }
-    
+
     &__description {
         font-family: 'Barlow';
         font-style: normal;
@@ -77,4 +69,158 @@
         
         &__heading-gran::before { background-image: url(./../../images/espresso.png);}
     } 
+}
+
+@media only screen and (max-width: 800px) {
+    /* TABLET */
+
+    .collection {
+    
+        &__container {
+            margin-bottom: 144px;
+        }
+        
+        &__inner-wrapper {
+            display: flex;
+            flex-direction: column;
+            background-image: url(./../../images/collection__text.svg);
+            background-size: 689px 118px contain;
+            background-repeat: no-repeat;
+            background-position: calc(0%) calc(0%);
+        }
+        
+        &__list {
+            display: inline-block;
+        }
+        
+        &__item {
+            display: flex;
+            max-width: 689px;
+            width: 100%;
+            -webkit-box-orient: vertical;
+            -webkit-box-direction: normal;
+            flex-direction: row;
+        }
+        
+        &__item-img {
+            display: inline-block;
+            margin-right: 36px;
+            width: 256px;
+            height: 193px;
+            object-fit: contain;
+        }
+        
+        &__item-wrapper {
+            display: inline-block;
+            max-width: 282px;
+            margin-bottom: 57px;
+        }
+
+        &__heading-gran {
+            font-family: 'Fraunces';
+            font-style: normal;
+            font-weight: 900;
+            font-size: 24px;
+            line-height: 32px;
+            color: #333D4B;
+            margin-bottom: 24px;
+        }
+        
+        &__description {
+            font-family: 'Barlow';
+            font-style: normal;
+            font-weight: 400;
+            font-size: 15px;
+            line-height: 25px;
+            color: #333D4B;
+        }
+        
+        @media
+        only screen and (-webkit-min-device-pixel-ratio: 2),
+        only screen and (   min--moz-device-pixel-ratio: 2),
+        only screen and (     -o-min-device-pixel-ratio: 2/1),
+        only screen and (        min-device-pixel-ratio: 2),
+        only screen and (                min-resolution: 192dpi),
+        only screen and (                min-resolution: 2dppx) { 
+            
+            &__heading-gran::before { background-image: url(./../../images/espresso.png);}
+        } 
+    }
+}
+
+@media only screen and (max-width: 400px) {
+    /* MOBILE */
+
+    .collection {
+    
+        &__container {
+            margin-bottom: 120px;
+        }
+        
+        &__inner-wrapper {
+            display: flex;
+            flex-direction: column;
+            background-image: url(./../../images/collection__mob.svg);
+            max-width: 327px;
+            width: 100%;
+            background-size:contain;
+            background-repeat: no-repeat;
+            background-position: calc(0%) calc(0%);
+        }
+        
+        &__list {
+            display: inline-block;
+            align-items: center;
+        }
+        
+        &__item {
+            display: inline-block;
+            max-width: 282px;
+            width: 100%;
+        }
+        
+        &__item-img {
+            display: inline-block;
+            width: 256px;
+            height: 193px;
+            object-fit: contain;
+            margin-bottom: 24px;
+        }
+        
+        &__item-wrapper {
+            display: inline-block;
+            max-width: 282px;
+            margin-bottom: 57px;
+        }
+
+        &__heading-gran {
+            font-family: 'Fraunces';
+            font-style: normal;
+            font-weight: 900;
+            font-size: 24px;
+            line-height: 32px;
+            color: #333D4B;
+            margin-bottom: 24px;
+        }
+        
+        &__description {
+            font-family: 'Barlow';
+            font-style: normal;
+            font-weight: 400;
+            font-size: 15px;
+            line-height: 25px;
+            color: #333D4B;
+        }
+        
+        @media
+        only screen and (-webkit-min-device-pixel-ratio: 2),
+        only screen and (   min--moz-device-pixel-ratio: 2),
+        only screen and (     -o-min-device-pixel-ratio: 2/1),
+        only screen and (        min-device-pixel-ratio: 2),
+        only screen and (                min-resolution: 192dpi),
+        only screen and (                min-resolution: 2dppx) { 
+            
+            &__heading-gran::before { background-image: url(./../../images/espresso.png);}
+        } 
+    }
 }
