--- a/scss/blocks/_drink.scss
+++ b/scss/blocks/_drink.scss
@@ -95,6 +95,8 @@
     
     &__list-arrow {
         border: none;
+        outline: none;
+        background: none;
         width: 18px;
         height: 12px;
         background-image: url(./../../images/arrow_down.svg);
